--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <a class="brand" href="https://kdong1224.github.io/dothome21/">KDONG</a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
-                        <li><a href="https://kdong1224.tistory.com/">Tistory</a></li>
+                        <li><a href="https://kdongnote.tistory.com/">Tistory</a></li>
                         <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
                     </ul>
                 </div>
