--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -204,6 +204,9 @@
         ol li.active a {
             color: #fff;
         }
+        .mt20{
+            margin-top: 20px;
+        }
     </style>
 </head>
 
@@ -211,12 +214,60 @@
 
     <h1>Javascript 문법 정리</h1>
     <ol>
-        <li><a href="#sample1">변수</a></li>
-        <li><a href="#sample4">상수</a></li>
-        <li><a href="#sample5">배열(Array)</a></li>
-        <li><a href="#sample9">객체(Object)</a></li>
+        <li><a href="javascript100.html">변수</a></li>
+        <li><a href="javascript100.html">상수</a></li>
+        <li><a href="javascript100.html">배열(Array)</a></li>
+        <li><a href="javascript100.html">객체(Object)</a></li>
+    </ol>
+    <ol>
+        <li><a href="javascript300.html">함수(Function)</a></li>
+    </ol>
+    <ol>
+        <li><a href="javascript200.html">조건문 (IF문)</a></li>
+        <li><a href="javascript200.html">반복문 (FOR문)</a></li>
     </ol>
 
+    <h2>데이터 저장하기</h2>
+    <ul>
+        <li><a href="#sample1">01. 변수 : 데이터 저장</a></li>
+        <li><a href="#sample2">02. 변수 : 데이터 저장 + 데이터 변경</a></li>
+        <li><a href="#sample3">03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</a></li>
+        <li><a href="#sample4">04. 상수 : 데이터 저장 (변하지 않음)</a></li>
+        <li><a href="#sample5">05. 배열 : 데이터 저장 (여러개) : 표현 방법1</a></li>
+        <li><a href="#sample6">06. 배열 : 데이터 저장 (여러개) : 표현 방법2</a></li>
+        <li><a href="#sample7">07. 배열 : 데이터 저장 (여러개) : 표현 방법3</a></li>
+        <li><a href="#sample8">08. 배열 : 데이터 저장 (여러개) : 표현 방법4</a></li>
+        <li><a href="#sample9">09. 객체 : 데이터 저장 (키와 값) : 표현 방법1 : 객체 스타일</a></li>
+        <li><a href="#sample10">10. 객체 : 데이터 저장 (키와 값) : 표현 방법2 : 배열 스타일</a></li>
+        <li><a href="#sample11">11. 객체 : 데이터 저장 (키와 값) : 표현 방법3</a></li>
+        <li><a href="#sample12">12. 객체 : 데이터 저장 (키와 값) : 표현 방법4</a></li>
+        <li><a href="#sample13">13. 객체 : 데이터 저장 (키와 값) : 표현 방법5 : 배열 속에 객체</a></li>
+        <li><a href="#sample14">14. 객체 : 데이터 저장 (키와 값) : 표현 방법6 : 객체 속에 배열</a></li>
+        <li><a href="#sample15">15. 객체 : 데이터 저장 (키와 값) : 표현 방법7 : 객체 속에 변수</a></li>
+        <li><a href="#sample16">16. 객체 : 데이터 저장 (키와 값) : 표현 방법8 : 객체 속에 함수</a></li>
+    </ul>
+
+    <!-- 중급 -->
+    <h2 class="mt20">데이터 실행 : 함수</h2>
+    <ul>
+        <li>30. 선언적 함수(기본)</li>
+        <li>30. 익명 함수</li>
+        <li>30. 매개변수 함수</li>
+        <li>30. 리턴값 함수</li>
+        <li>30. 재귀 함수</li>
+        <li>30. 콜백 함수</li>
+        <li>30. 내부 함수</li>
+        <li>30. 객체 생성자 함수</li>
+        <li>30. 프로토타입 함수</li>
+        <li>30. 화살표 함수</li>
+        <li>30. 아규먼트 함수</li>
+        <li>30. 즉시실행 함수</li>
+        <li>30. 파라미터 함수</li> 
+    </ul>
+
+    <hr>
+
+    
     <div id="sample1" class="sample">
         <h2>01. 변수 : 데이터 저장소 <span class="dot"></span></h2>
         <div class="code">
@@ -536,7 +587,7 @@
         }
 
         //sample9
-        //09. 객체 : 데이터 저장소(키와 값으로 이루어짐)
+        //09. 객체 : 데이터 저장(키와 값) : 표현 방법1 : 배열 스타일
         {
             const obj = new Object();
             obj[0] = 100;
@@ -550,7 +601,7 @@
         }
 
         //sample10
-        //10. 객체 : 데이터 저장소(키와 값으로 이루어짐)
+        //10. 객체 : 데이터 저장(키와 값) : 표현 방법2 : 객체 스타일
         {
             const obj = new Object();
             obj.a = 100;
@@ -562,7 +613,111 @@
             document.write(obj.b, "<br>");
             document.write(obj.c, "<br><br>");
         }
+        
+        //sample11
+        //11. 객체 : 데이터 저장(키와 값) : 표현 방법3 : 키워드 생략
+        {
+            const obj = {};
+            obj.a = 100;
+            obj.b = 200;
+            obj.c = "javascript";
+
+            document.write("*** 11. 객체 ***<br>");
+            document.write(obj.a, "<br>");
+            document.write(obj.b, "<br>");
+            document.write(obj.c, "<br><br>");
+        }
+
+        //sample12
+        //12. 객체 : 데이터 저장(키와 값) : 표현 방법4
+        {
+            const obj = {a:100, b:200, c:"javascript"};  //가장 많이 사용하는 형태
+
+            document.write("*** 12. 객체 ***<br>");
+            document.write(obj.a, "<br>");
+            document.write(obj.b, "<br>");
+            document.write(obj.c, "<br><br>");
+        }
+
+        //sample13
+        //13. 객체 : 데이터 저장(키와 값) : 표현 방법5 : 배열 속에 객체
+        {
+            const obj = [
+                {a:100, b:200},
+                {c:"javascript"}
+            ];
+
+            document.write("*** 13. 객체 ***<br>");
+            // console.log(obj[0], "<br>"); 콘솔로그 - 크롬 개발자 모드
+            document.write(obj[0].a, "<br>");
+            document.write(obj[0].b, "<br>");
+            document.write(obj[1].c, "<br><br>");
+        }
+
+        //sample14
+        //14. 객체 : 데이터 저장(키와 값) : 표현 방법6 : 객체 속에 배열
+        {
+            const obj = {
+                a: 100,
+                b: [200, 300],
+                c: "javascript"
+            }
+
+            document.write("*** 14. 객체 ***<br>");
+            document.write(obj.a, "<br>");
+            document.write(obj.b, "<br>");
+            document.write(obj.b[0], "<br>");
+            document.write(obj.b[1], "<br>");
+            document.write(obj.c, "<br><br>");
+        }
+
+        //sample15
+        //15. 객체 : 데이터 저장(키와 값) : 표현 방법7 : 객체 속에 변수
+        {
+            const a = 100;
+            const b = 200;
+            const c = "javascript";
+
+            const obj = { a, b, c}
+
+            document.write("*** 15. 객체 ***<br>"); //실행문
+            document.write(obj.a, "<br>");
+            document.write(obj.b, "<br>");
+            document.write(obj.c, "<br><br>");
+
+        }
+
+        //sample16
+        //16. 객체 : 데이터 저장(키와 값) : 표현 방법8 : 객체 속에 함수
+        {
+            const obj = {
+                a: 100,
+                b: [200, 300],
+                c: "javascript",
+                d: function(){
+                    document.write("javascript가 실행되었습니다.<br>");
+                },
+                e: function(){
+                    document.write( obj.c + "가 실행되었습니다.<br>");
+                },
+                f: function(){
+                    document.write( this.c + "가 실행되었습니다.<br>");
+                }
+            }
+
+            document.write("*** 16. 객체 ***<br>");
+            document.write(obj.a, "<br>");
+            document.write(obj.b, "<br>");
+            document.write(obj.b[0], "<br>");
+            document.write(obj.b[1], "<br>");
+            document.write(obj.c, "<br>");
+            obj.d(); //실행문(함수)
+            obj.e();
+            obj.f();
+        }
+
     </script>
+
 </body>
 
 </html>
