--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -355,7 +355,7 @@
     <hr>
 
     <div id="sample5" class="sample">
-        <h2>05. 배열 : 여러개의 데이터 저장 : 표현방법 1<span class="dot"></span></h2>
+        <h2>05. 배열 : 여러개의 데이터 저장 : 표현방법 1 : 객체 스타일<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const arr = new Array();    //배열선언
@@ -375,7 +375,7 @@
     <hr>
 
     <div id="sample6" class="sample">
-        <h2>06. 배열 : 여러개의 데이터 저장 : 표현방법 2 <span class="dot"></span></h2>
+        <h2>06. 배열 : 여러개의 데이터 저장 : 표현방법 2 : 배열<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const arr = new Array(100, 200, "javascript");
@@ -429,7 +429,7 @@
     <hr>
 
     <div id="sample9" class="sample">
-        <h2>09. 객체 : 데이터 저장소(키와 값으로 이루어짐)<span class="dot"></span></h2>
+        <h2>09. 객체 : 데이터 저장(키와 값) : 표현 방법1<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = new Object();
@@ -449,7 +449,7 @@
     <hr>
 
     <div id="sample10" class="sample">
-        <h2>10. 객체 : 데이터 저장소(키와 값으로 이루어짐)<span class="dot"></span></h2>
+        <h2>10. 객체 : 데이터 저장(키와 값) : 표현 방법2<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = new Object();
@@ -467,7 +467,145 @@
     </div>
 
     <hr>
+
+    <div id="sample11" class="sample">
+        <h2>11. 객체 : 데이터 저장(키와 값) : 표현 방법3 : 키워드 생략<span class="dot"></span></h2>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    const obj = {};
+    obj.a = 100;
+    obj.b = 200;
+    obj.c = "javascript";
+
+    document.write("*** 11. 객체 ***");
+    document.write(obj.a);
+    document.write(obj.b);
+    document.write(obj.c);
+}
+</code></pre>
+        </div>
+    </div>
+
     <hr>
+
+    <div id="sample12" class="sample">
+        <h2>12. 객체 : 데이터 저장(키와 값) : 표현 방법4<span class="dot"></span></h2>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    const obj = {a: 100, b: 200, c:"javascript"};  //가장 많이 사용하는 형태
+
+    document.write("*** 12. 객체 ***");
+    document.write(obj.a);
+    document.write(obj.b);
+    document.write(obj.c);
+}
+</code></pre>
+        </div>
+    </div>
+
+    <hr>
+
+    <div id="sample13" class="sample">
+        <h2>13. 객체 : 데이터 저장(키와 값) : 표현 방법5 : 배열 속에 객체<span class="dot"></span></h2>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    const obj = {a: 100, b: 200, c:"javascript"};  //가장 많이 사용하는 형태
+
+    const obj = [
+        {a:100, b:200},
+        {c:"javascript"}
+    ];
+
+    document.write("*** 13. 객체 ***");
+    document.write(obj[0].a);
+    document.write(obj[0].b);
+    document.write(obj[1].c);
+
+    // console.log(obj[0]); 콘솔로그 - 크롬 개발자 모드
+}
+</code></pre>
+        </div>
+    </div>
+
+    <hr>
+
+    <div id="sample14" class="sample">
+        <h2>14. 객체 : 데이터 저장(키와 값) : 표현 방법6 : 객체 속에 배열<span class="dot"></span></h2>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    const obj = {
+        a: 100,
+        b: [200, 300],
+        c: "javascript"
+    }
+
+    document.write("*** 14. 객체 ***");
+    document.write(obj.a);
+    document.write(obj.b);
+    document.write(obj.b[0]);
+    document.write(obj.b[1]);
+    document.write(obj.c);
+}
+</code></pre>
+        </div>
+    </div>
+
+    <hr>
+
+    <div id="sample15" class="sample">
+        <h2>15. 객체 : 데이터 저장(키와 값) : 표현 방법7 : 객체 속에 변수<span class="dot"></span></h2>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    const a = 100;
+    const b = 200;
+    const c = "javascript";
+
+    const obj = { a, b, c}
+
+    document.write("*** 15. 객체 ***); //실행문
+    document.write(obj.a);
+    document.write(obj.b);
+    document.write(obj.c);
+}
+</code></pre>
+        </div>
+    </div>
+
+    <hr>
+
+    <div id="sample16" class="sample">
+        <h2>16. 객체 : 데이터 저장(키와 값) : 표현 방법8 : 객체 속에 함수<span class="dot"></span></h2>
+        <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    const obj = {
+        a: 100,
+        b: [200, 300],
+        c: "javascript",
+        d: function(){
+            document.write("javascript가 실행되었습);
+        },
+        e: function(){
+            document.write( obj.c + "가 실행되었습);
+        },
+        f: function(){
+            document.write( this.c + "가 실행되었습);
+        }
+    }
+
+    document.write("*** 16. 객체 ***);
+    document.write(obj.a);
+    document.write(obj.b);
+    document.write(obj.b[0]);
+    document.write(obj.b[1]);
+    document.write(obj.c);
+    obj.d(); //실행문(함수)
+    obj.e();
+    obj.f();
+}
+</code></pre>
+        </div>
+    </div>
+
     <hr>
     <hr>
 
