--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -248,7 +248,7 @@
     </ul>
 
     <!-- 중급 -->
-    <h2 class="mt20">데이터 실행 : 함수</h2>
+    <!-- <h2 class="mt20">데이터 실행 : 함수</h2>
     <ul>
         <li>30. 선언적 함수(기본)</li>
         <li>30. 익명 함수</li>
@@ -263,7 +263,7 @@
         <li>30. 아규먼트 함수</li>
         <li>30. 즉시실행 함수</li>
         <li>30. 파라미터 함수</li> 
-    </ul>
+    </ul> -->
 
     <hr>
 
