--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -227,9 +227,21 @@
         <li><a href="javascript200.html">반복문 (FOR문)</a></li>
     </ol>
 
-    <h2 class="mt20">함수(Function)</h2>
+    <h2 class="mt20">데이터 실행 : 함수</h2>
     <ul>
-        <li><a href="#">01. </a></li>
+        <li><a href="#">30. 선언적 함수(기본)</a></li>
+        <li><a href="#">30. 익명 함수</a></li>
+        <li><a href="#">30. 매개변수 함수</a></li>
+        <li><a href="#">30. 리턴값 함수</a></li>
+        <li><a href="#">30. 재귀 함수</a></li>
+        <li><a href="#">30. 콜백 함수</a></li>
+        <li><a href="#">30. 내부 함수</a></li>
+        <li><a href="#">30. 객체 생성자 함수</a></li>
+        <li><a href="#">30. 프로토타입 함수</a></li>
+        <li><a href="#">30. 화살표 함수</a></li>
+        <li><a href="#">30. 아규먼트 함수</a></li>
+        <li><a href="#">30. 즉시실행 함수</a></li>
+        <li><a href="#">30. 파라미터 함수</a></li> 
     </ul>
 
     <hr>
