--- a/class/index.html
+++ b/class/index.html
@@ -80,7 +80,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Class v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://kdong1224.github.io/dothome21/" target="_blank">kdong1224.github.io/</a></p>
+            <p><a href="https://kdong1224.github.io/dothome21/" target="_blank">kdong1224.github.io</a></p>
         </div>
     </div>
 
