--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -223,8 +223,8 @@
         <li><a href="javascript300.html">함수(Function)</a></li>
     </ol>
     <ol>
-        <li><a href="javascript200.html">조건문 (IF문)</a></li>
-        <li><a href="javascript200.html">반복문 (FOR문)</a></li>
+        <li><a href="javascript200.html">조건문</a></li>
+        <li><a href="javascript200.html">반복문</a></li>
     </ol>
 
     <h2 class="mt20">데이터 실행 : 함수</h2>
