--- a/javascript/javascript200.html
+++ b/javascript/javascript200.html
@@ -875,7 +875,7 @@
         //sample101
         //101. 테이블 만들기
         {
-            document.write("*** 101. 구구단 테이블 만들기 ***<br>");
+            document.write("*** 101. 테이블 만들기 ***<br>");
 
             let num = 1;
             let table = "<table>";
