--- a/javascript/javascript200.html
+++ b/javascript/javascript200.html
@@ -507,7 +507,7 @@
 
     <!-- sample101 -->
     <div id="sample101" class="sample">
-        <h2>101. 구구단 테이블 만들기<span class="dot"></span></h2>
+        <h2>101. 테이블 만들기<span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 101. 테이블 만들기 ***");
