--- a/javascript/javascript400.html
+++ b/javascript/javascript400.html
@@ -215,9 +215,12 @@
             content: "데이터 저장하기 : ";
         }
         .ol2::before {
-            content: "데이터 실행하기 : ";
+            content: "데이터 불러오기 : ";
         }
         .ol3::before {
+            content: "데이터 실행하기 : ";
+        }
+        .ol4::before {
             content: "데이터 제어하기 : ";
         }
     </style>
@@ -233,9 +236,12 @@
         <li><a href="javascript100.html">객체(Object)</a></li>
     </ol>
     <ol class="ol2">
-        <li><a href="javascript300.html">함수(Function)</a></li>
+        <li><a href="javascript500.html">데이터</a></li>
     </ol>
     <ol class="ol3">
+        <li><a href="javascript300.html">함수(Function)</a></li>
+    </ol>
+    <ol class="ol4">
         <li><a href="javascript200.html">조건문</a></li>
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
@@ -260,7 +266,7 @@
 
     <!-- sample1 -->
     <div id="sample1" class="sample">
-        <h2>01. 1부터 100까지 출력하기 <span class="dot"></span></h2>
+        <h2> 01. 1부터 100까지 출력하기 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 01. 1부터 100까지 출력하기 ***");
@@ -277,7 +283,7 @@
     
     <!-- sample2 -->
     <div id="sample2" class="sample">
-        <h2>02. 1부터 100까지 출력하기 : 짝수만<span class="dot"></span></h2>
+        <h2> 02. 1부터 100까지 출력하기 : 짝수만 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 02. 1부터 100까지 출력하기 : 짝수만 ***");
@@ -294,7 +300,7 @@
 
     <!-- sample3 -->
     <div id="sample3" class="sample">
-        <h2>03. 1부터 100까지 출력하기 : 5의 배수만<span class="dot"></span></h2>
+        <h2> 03. 1부터 100까지 출력하기 : 5의 배수만 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 03. 1부터 100까지 출력하기 : 5의 배수만 ***");
@@ -311,7 +317,7 @@
 
     <!-- sample4 -->
     <div id="sample4" class="sample">
-        <h2>04. 1부터 100까지 출력하기 : 짝수는 빨간색, 홀수는 파란색 출력<span class="dot"></span></h2>
+        <h2> 04. 1부터 100까지 출력하기 : 짝수는 빨간색, 홀수는 파란색 출력 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 04. 1부터 100까지 출력하기 : 짝수는 빨간색, 홀수는 파란색 출력 ***<br>");
@@ -332,7 +338,7 @@
 
     <!-- sample5 -->
     <div id="sample5" class="sample">
-        <h2>05. 1부터 100까지 합 출력하기<span class="dot"></span></h2>
+        <h2> 5. 1부터 100까지 합 출력하기 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 05. 1부터 100까지 합 출력하기 ***");
@@ -351,7 +357,7 @@
 
     <!-- sample6 -->
     <div id="sample6" class="sample">
-        <h2>06. 구구단 출력하기<span class="dot"></span></h2>
+        <h2 >06. 구구단 출력하기 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 06. 구구단 출력하기 ***");
@@ -372,7 +378,7 @@
 
     <!-- sample7 -->
     <div id="sample7" class="sample">
-        <h2>07. 테이블 만들기1<span class="dot"></span></h2>
+        <h2> 07. 테이블 만들기1 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 07. 테이블 만들기1 ***");
@@ -401,7 +407,7 @@
 
     <!-- sample8 -->
     <div id="sample8" class="sample">
-        <h2>08. 테이블 만들기2<span class="dot"></span></h2>
+        <h2> 08. 테이블 만들기2 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 08. 테이블 만들기2 ***");
@@ -430,7 +436,7 @@
 
     <!-- sample9 -->
     <div id="sample9" class="sample">
-        <h2>09. 테이블 만들기3<span class="dot"></span></h2>
+        <h2> 09. 테이블 만들기3 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 09. 테이블 만들기3 : 짝수만 ***");
