--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -210,9 +210,12 @@
             content: "데이터 저장하기 : ";
         }
         .ol2::before {
-            content: "데이터 실행하기 : ";
+            content: "데이터 불러오기 : ";
         }
         .ol3::before {
+            content: "데이터 실행하기 : ";
+        }
+        .ol4::before {
             content: "데이터 제어하기 : ";
         }
     </style>
@@ -228,9 +231,12 @@
         <li><a href="javascript100.html">객체(Object)</a></li>
     </ol>
     <ol class="ol2">
-        <li><a href="javascript300.html">함수(Function)</a></li>
+        <li><a href="javascript500.html">데이터</a></li>
     </ol>
     <ol class="ol3">
+        <li><a href="javascript300.html">함수(Function)</a></li>
+    </ol>
+    <ol class="ol4">
         <li><a href="javascript200.html">조건문</a></li>
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
@@ -280,7 +286,7 @@
 
     
     <div id="sample1" class="sample">
-        <h2>01. 변수 : 데이터 저장소 <span class="dot"></span></h2>
+        <h2> 01. 변수 : 데이터 저장소 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     var x = 100; //변수 x에 숫자 100을 저장
@@ -299,7 +305,7 @@
     <hr>
 
     <div id="sample2" class="sample">
-        <h2>02. 변수 : 데이터 저장 + 데이터 변경 <span class="dot"></span></h2>
+        <h2> 02. 변수 : 데이터 저장 + 데이터 변경 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     let x = 100;
@@ -321,7 +327,7 @@
     <hr>
 
     <div id="sample3" class="sample">
-        <h2>03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가 <span class="dot"></span></h2>
+        <h2> 03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     let x = 100;
@@ -343,7 +349,7 @@
     <hr>
 
     <div id="sample4" class="sample">
-        <h2>04. 상수<span class="dot"></span></h2>
+        <h2> 04. 상수 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const x = 100;
@@ -366,7 +372,7 @@
     <hr>
 
     <div id="sample5" class="sample">
-        <h2>05. 배열 : 여러개의 데이터 저장 : 표현방법 1 : 객체 스타일<span class="dot"></span></h2>
+        <h2> 05. 배열 : 여러개의 데이터 저장 : 표현방법 1 : 객체 스타일 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const arr = new Array();    //배열선언
@@ -386,7 +392,7 @@
     <hr>
 
     <div id="sample6" class="sample">
-        <h2>06. 배열 : 여러개의 데이터 저장 : 표현방법 2 : 배열<span class="dot"></span></h2>
+        <h2> 06. 배열 : 여러개의 데이터 저장 : 표현방법 2 : 배열 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const arr = new Array(100, 200, "javascript");
@@ -403,7 +409,7 @@
     <hr>
 
     <div id="sample7" class="sample">
-        <h2>07. 배열 : 여러개의 데이터 저장 : 표현방법 3<span class="dot"></span></h2>
+        <h2> 07. 배열 : 여러개의 데이터 저장 : 표현방법 3 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const arr = [];             //배열 선언
@@ -423,7 +429,7 @@
     <hr>
 
     <div id="sample8" class="sample">
-        <h2>08. 배열 : 여러개의 데이터 저장 : 표현방법 4<span class="dot"></span></h2>
+        <h2> 08. 배열 : 여러개의 데이터 저장 : 표현방법 4 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const arr = [100, 200, "javascript"];       //배열 선언  
@@ -440,7 +446,7 @@
     <hr>
 
     <div id="sample9" class="sample">
-        <h2>09. 객체 : 데이터 저장(키와 값) : 표현 방법1<span class="dot"></span></h2>
+        <h2> 09. 객체 : 데이터 저장(키와 값) : 표현 방법1 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = new Object();
@@ -460,7 +466,7 @@
     <hr>
 
     <div id="sample10" class="sample">
-        <h2>10. 객체 : 데이터 저장(키와 값) : 표현 방법2<span class="dot"></span></h2>
+        <h2> 10. 객체 : 데이터 저장(키와 값) : 표현 방법2 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = new Object();
@@ -480,7 +486,7 @@
     <hr>
 
     <div id="sample11" class="sample">
-        <h2>11. 객체 : 데이터 저장(키와 값) : 표현 방법3 : 키워드 생략<span class="dot"></span></h2>
+        <h2> 11. 객체 : 데이터 저장(키와 값) : 표현 방법3 : 키워드 생략 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = {};
@@ -500,7 +506,7 @@
     <hr>
 
     <div id="sample12" class="sample">
-        <h2>12. 객체 : 데이터 저장(키와 값) : 표현 방법4<span class="dot"></span></h2>
+        <h2> 12. 객체 : 데이터 저장(키와 값) : 표현 방법4 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = {a: 100, b: 200, c:"javascript"};  //가장 많이 사용하는 형태
@@ -517,7 +523,7 @@
     <hr>
 
     <div id="sample13" class="sample">
-        <h2>13. 객체 : 데이터 저장(키와 값) : 표현 방법5 : 배열 속에 객체<span class="dot"></span></h2>
+        <h2> 13. 객체 : 데이터 저장(키와 값) : 표현 방법5 : 배열 속에 객체 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = {a: 100, b: 200, c:"javascript"};  //가장 많이 사용하는 형태
@@ -541,7 +547,7 @@
     <hr>
 
     <div id="sample14" class="sample">
-        <h2>14. 객체 : 데이터 저장(키와 값) : 표현 방법6 : 객체 속에 배열<span class="dot"></span></h2>
+        <h2> 14. 객체 : 데이터 저장(키와 값) : 표현 방법6 : 객체 속에 배열 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = {
@@ -564,7 +570,7 @@
     <hr>
 
     <div id="sample15" class="sample">
-        <h2>15. 객체 : 데이터 저장(키와 값) : 표현 방법7 : 객체 속에 변수<span class="dot"></span></h2>
+        <h2> 15. 객체 : 데이터 저장(키와 값) : 표현 방법7 : 객체 속에 변수 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const a = 100;
@@ -585,7 +591,7 @@
     <hr>
 
     <div id="sample16" class="sample">
-        <h2>16. 객체 : 데이터 저장(키와 값) : 표현 방법8 : 객체 속에 함수<span class="dot"></span></h2>
+        <h2> 16. 객체 : 데이터 저장(키와 값) : 표현 방법8 : 객체 속에 함수 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const obj = {
