--- a/javascript/javascript200.html
+++ b/javascript/javascript200.html
@@ -215,9 +215,12 @@
             content: "데이터 저장하기 : ";
         }
         .ol2::before {
-            content: "데이터 실행하기 : ";
+            content: "데이터 불러오기 : ";
         }
         .ol3::before {
+            content: "데이터 실행하기 : ";
+        }
+        .ol4::before {
             content: "데이터 제어하기 : ";
         }
     </style>
@@ -233,9 +236,12 @@
         <li><a href="javascript100.html">객체(Object)</a></li>
     </ol>
     <ol class="ol2">
-        <li><a href="javascript300.html">함수(Function)</a></li>
+        <li><a href="javascript500.html">데이터</a></li>
     </ol>
     <ol class="ol3">
+        <li><a href="javascript300.html">함수(Function)</a></li>
+    </ol>
+    <ol class="ol4">
         <li><a href="javascript200.html">조건문</a></li>
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
@@ -266,7 +272,7 @@
 
     <!-- sample1 -->
     <div id="sample1" class="sample">
-        <h2>01. if문 <span class="dot"></span></h2>
+        <h2> 01. if문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     //true, false --> 1, "1"=true, [ ], { },=true
@@ -295,7 +301,7 @@
 
     <!-- sample2 -->
     <div id="sample2" class="sample">
-        <h2>02. 다중 if문 <span class="dot"></span></h2>
+        <h2> 02. 다중 if문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     let num = 100;
@@ -325,7 +331,7 @@
 
     <!-- sample3 -->
     <div id="sample3" class="sample">
-        <h2>03. 중첩 if문 <span class="dot"></span></h2>
+        <h2> 03. 중첩 if문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     let num = 100;
@@ -352,7 +358,7 @@
 
     <!-- sample4 -->
     <div id="sample4" class="sample">
-        <h2>04. switch문 <span class="dot"></span></h2>
+        <h2> 04. switch문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     let num = 100;
@@ -384,7 +390,7 @@
 
     <!-- sample5 -->
     <div id="sample5" class="sample">
-        <h2>05. 조건부 연산자(삼항연산자) <span class="dot"></span></h2>
+        <h2> 05. 조건부 연산자(삼항연산자) <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     let num = 100;
@@ -402,7 +408,7 @@
 
     <!-- sample6 -->
     <div id="sample6" class="sample">
-        <h2>06. if문 생략 <span class="dot"></span></h2>
+        <h2> 06. if문 생략 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     let num = 100;
@@ -420,7 +426,7 @@
 
     <!-- sample7 -->
     <div id="sample7" class="sample">
-        <h2>07. while문<span class="dot"></span></h2>
+        <h2> 07. while문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 07. while문 ***");
@@ -439,7 +445,7 @@
 
     <!-- sample8 -->
     <div id="sample8" class="sample">
-        <h2>08. do while문<span class="dot"></span></h2>
+        <h2> 08. do while문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 08. do while문 ***");
@@ -458,7 +464,7 @@
 
     <!-- sample9 -->
     <div id="sample9" class="sample">
-        <h2>09. for문<span class="dot"></span></h2>
+        <h2> 09. for문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 09. for문 ***");
@@ -479,7 +485,7 @@
 
     <!-- sample10 -->
     <div id="sample10" class="sample">
-        <h2>10. 중첩 for문<span class="dot"></span></h2>
+        <h2> 10. 중첩 for문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 10. 중첩 for문 ***");
@@ -499,7 +505,7 @@
 
     <!-- sample11 -->
     <div id="sample11" class="sample">
-        <h2>11. forEach문<span class="dot"></span></h2>
+        <h2> 11. forEach문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 11. forEach문() : 배열에서 사용 ***");
@@ -537,7 +543,7 @@
 
     <!-- sample12 -->
     <div id="sample12" class="sample">
-        <h2>12. for of문<span class="dot"></span></h2>
+        <h2> 12. for of문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 12. for of문 : 배열에서 사용  ***");
@@ -556,7 +562,7 @@
 
     <!-- sample13 -->
     <div id="sample13" class="sample">
-        <h2>13. for in문<span class="dot"></span></h2>
+        <h2> 13. for in문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 13. for in문 : 객체에서 사용  ***");
@@ -590,7 +596,7 @@
 
     <!-- sample14 -->
     <div id="sample14" class="sample">
-        <h2>14. break문<span class="dot"></span></h2>
+        <h2> 14. break문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 14. break문  ***");
@@ -621,7 +627,7 @@
 
     <!-- sample15 -->
     <div id="sample15" class="sample">
-        <h2>15. continue문<span class="dot"></span></h2>
+        <h2> 15. continue문 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     document.write("*** 15. continue문  ***");
