--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -417,7 +417,28 @@
 
         // 7월 26일 숙제
         // 배열 데이터의 합을 출력하세요!! (hint. 알고리즘에서 함.)
+        {
+            const arr = [100, 200, 300, 400, 500];
 
+            document.write("*** 배열 데이터의 합을 출력하세요!! ***<br>");
+
+            let sum = 0;
+            arr.forEach((el) => {
+                sum += el;
+            });
+            document.write(sum);
+            
+        }
+
+        // arr.forEach(function(el){
+        //     document.write(el, "<br>");
+        // });
+
+        // num.forEach((element, index, array) => {
+        //         document.write(element, "<br>");
+        //         document.write(index, "<br>");
+        //         document.write(array, "<br>");
+        //     });
 
     </script>
 
