--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="webstoryboy">
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
     <meta name="keywords"
-        content="크도동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design">
-    <title>크도동 | KDONG</title>
+        content="크동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design">
+    <title>크동 | KDONG</title>
 
     <!-- css -->
     <link href="assets/css/bootstrapTheme.css" rel="stylesheet">
@@ -29,10 +29,10 @@
 
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="크도동" />
+    <meta property="og:title" content="크동" />
     <meta property="og:url" content="https://kdong1224.github.io/dothome21/" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
-    <meta property="og:site_name" content="크도동" />
+    <meta property="og:site_name" content="크동" />
     <meta property="og:description" content="웹과 관련된 정보를 제공합니다." />
 
     <!-- twitter meta tags -->
