--- a/javascript/javascript602.html
+++ b/javascript/javascript602.html
@@ -262,6 +262,11 @@
         .view table td.result:hover{
             color: #000;
         }
+        @media (max-width: 600px){
+            .view table td.result {
+                color: rgb(146, 50, 50);
+            }
+        }
     </style>
 </head>
 
