--- a/index.html
+++ b/index.html
@@ -170,18 +170,12 @@
                 <div id="options" class="gridly">
                     <ul class="filter option-set" data-filter-group="color">
                         <li><a href="#filter-color-any" data-filter-value="" class="selected">ALL</a></li>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a>
-                        </li>
-                        <li class="webstandard"><a href="#filter-color-webstandard"
-                                data-filter-value=".script">SCRIPT</a></li>
-                        <li class="webstandard"><a href="#filter-color-webstandard"
-                                data-filter-value=".reference">REFERENCE</a></li>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".site">SITE</a>
-                        </li>
-                        <li class="webstandard"><a href="#filter-color-webstandard"
-                                data-filter-value=".design">DESIGN</a></li>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".css">CSS</a>
-                        </li>
+                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a></li>
+                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">SCRIPT</a></li>
+                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".reference">REFERENCE</a></li>
+                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".site">SITE</a></li>
+                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".design">DESIGN</a></li>
+                        <!-- <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".css">CSS</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -211,7 +205,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape class">
+                    <section class="color-shape script">
                         <a href="javascript/javascript100.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -220,7 +214,7 @@
                                     <span class="overlay-text-thumb1-donut">자바스크립트</span>
                                     <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
                                 </div>
-                                <img src="assets/img/svg-fried-chicken.svg" alt="portfolio">
+                                <img src="assets/img/svg-pear.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>JAVASCRIPT</h5>
                                     <p>자바스크립트</p>
@@ -232,7 +226,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape class">
+                    <section class="color-shape site">
                         <a href="layout/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -246,6 +240,48 @@
                                     <h5>LAYOUT</h5>
                                     <p>레이아웃</p>
                                     <span>LAYOUT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="refer-html/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">HTML</span>
+                                    <span class="overlay-text-thumb-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb1-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb2-donut">HTML</span>
+                                </div>
+                                <img src="assets/img/svg-hotdog.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>HTML</h5>
+                                    <p>레퍼런스</p>
+                                    <span>HTML</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape reference">
+                        <a href="refer-css/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">CSS</span>
+                                    <span class="overlay-text-thumb-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb1-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb2-donut">CSS</span>
+                                </div>
+                                <img src="assets/img/svg-pizza.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>CSS</h5>
+                                    <p>레퍼런스</p>
+                                    <span>CSS</span>
                                 </div>
                             </div>
                         </a>
