--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -100,6 +100,20 @@
             color: #fff;
             cursor: crosshair;
         }
+        .link li {
+            list-style: none;
+        }
+        .link li a {
+            color: #fff;
+            text-decoration: none;
+            background: #000;
+            padding: 10px;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+        .link li a:hover {
+            background:#00db72;
+        }
         @media (max-width: 1220px){
             #contents {
                 width: 98%;
@@ -109,21 +123,28 @@
             #contents {
                 width: 96%;
             }
+            #header {
+                padding: 6% 2% 2% 2%;
+            }
             #header h1 {
                 font-size: 16px;
             }
             #header strong {
                 font-size: 14px;
+                bottom: 10%;
             }
             main h2 {
                 font-size: 30px;
+                padding: 22% 5% 5%;
             }
             .refer {
                 padding: 10px;
+                margin-bottom: 100px;
             }
             .refer h3 {
                 margin-bottom: 10px;
                 font-size: 16px;
+                padding: 6px 10px;
             }
             .refer table th {
                 padding: 8px;
@@ -144,6 +165,9 @@
 
     <main id="contents">
         <h2>CSS  <em>레퍼런스 북</em></h2>
+        <ul class="link">
+            <li><a href="../javascript/javascript602-sample01.html">CSS 속성 첫 글자 검색하기</a></li>
+        </ul>
         <section class="refer">
             <h3>Alphabet</h3>
             <table>
@@ -840,7 +864,7 @@
                     </tr>
                     <tr>
                         <td>text-align</td>
-                        <td>text-align 속성은 텍스트 정렬 방식을 설정합니다./td>
+                        <td>text-align 속성은 텍스트 정렬 방식을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>text-align-last</td>
