--- a/javascript/javascript606.html
+++ b/javascript/javascript606.html
@@ -268,24 +268,18 @@
         <li><a href="javascript606.html">샘플</a></li>
     </ol>
     
-    <h2 class="mt20">날짜 메서드</h2>
+    <h2 class="mt20">CSS 샘플</h2>
     <ul>
-        <li><a href="#sample1">01. 변수 : 데이터 불러오기 : 기본</a></li>
+        <li><a href="javascriptSample602-1.html">01. CSS 속성 첫 글자만 검색하기</a></li>
+        <li><a href="javascriptSample602-2.html">02. CSS 속성 검색하면 설명 보여주기</a></li>
+        <li><a href="javascriptSample602-3.html">03. CSS 속성 정렬하기</a></li>
 
-    <hr>
+    <h2 class="mt20">HTML 샘플</h2>
+    <ul>
+        <li><a href="javascriptSample603-1.html">01. HTML 속성 첫 글자만 검색하기</a></li>
+        <li><a href="javascriptSample603-2.html">02. HTML 속성 검색하면 설명 보여주기</a></li>
+        <li><a href="javascriptSample603-3.html">03. HTML 속성 정렬하기</a></li>
 
-    <!-- sample1 -->
-    <div id="sample1" class="sample">
-        <h2>01.  <span class="dot"></span></h2>
-        <div class="code">
-<pre class="line-numbers"><code class="language-js">{
-
-}
-</code></pre>
-        </div>
-    </div>
-
-    <hr>
     <hr>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
