--- a/javascript/javascriptSample602-1.html
+++ b/javascript/javascriptSample602-1.html
@@ -262,7 +262,7 @@
                         <li data-name="hyphens" data-topic="텍스트">hyphens</li>
                         <li data-name="isolation" data-topic="텍스트">isolation</li>
                         <li data-name="justify-content" data-topic="텍스트">justify-content</li>
-                        <li data-name="left" data-topic="왼쪽">left 속성은 위치 요소의 아래쪽 속성을 설정합니다.</li>
+                        <li data-name="left" data-topic="왼쪽">left 속성은 위치 요소의 왼쪽 속성을 설정합니다.</li>
                         <li data-name="letter-spacing" data-topic="텍스트">letter-spacing</li>
                         <li data-name="line-height" data-topic="텍스트">line-height 속성은 줄 간격을 설정합니다.</li>
                         <li data-name="list-style" data-topic="리스트">list-style</li>
@@ -305,7 +305,7 @@
                         <li data-name="position" data-topic="위치">position 속성은 요소의 위치를 설정합니다.</li>
                         <li data-name="quotes" data-topic="인용부호">quotes</li>
                         <li data-name="resize" data-topic="사이즈">resize</li>
-                        <li data-name="right" data-topic="오른쪽">right 속성은 위치 요소의 아래쪽 속성을 설정합니다.</li>
+                        <li data-name="right" data-topic="오른쪽">right 속성은 위치 요소의 오른쪽 속성을 설정합니다.</li>
                         <li data-name="tab-size" data-topic="글씨">tab-size</li>
                         <li data-name="table-layout" data-topic="테이블">table-layout</li>
                         <li data-name="text-align" data-topic="글씨">text-align 속성은 텍스트 정렬 방식을 설정합니다.</li>
@@ -319,7 +319,7 @@
                         <li data-name="text-overflow" data-topic="글씨">text-overflow</li>
                         <li data-name="text-shadow" data-topic="글씨">text-shadow</li>
                         <li data-name="text-transform" data-topic="글씨">text-transform</li>
-                        <li data-name="top" data-topic="위">top 속성은 위치 요소의 아래쪽 속성을 설정합니다.</li>
+                        <li data-name="top" data-topic="위">top 속성은 위치 요소의 윗쪽 속성을 설정합니다.</li>
                         <li data-name="transform" data-topic="형태">transform</li>
                         <li data-name="transform-origin" data-topic="형태">transform-origin</li>
                         <li data-name="transform-style" data-topic="형태">transform-style</li>
