--- a/javascript/javascript602.html
+++ b/javascript/javascript602.html
@@ -986,7 +986,7 @@
                     </tr>
                 </tbody>
             </table>
-        </div>ㄴ
+        </div>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     const str1 = "자바스크립트(javascript) 공부";
