--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -310,7 +310,7 @@
         <h2> 02. 익명 함수 <span class="dot"></span></h2>
         <div class="code">
 <pre class="line-numbers"><code class="language-js">{
-    conts func = function(){
+    const func = function(){
         document.write("*** 02. 익명 함수 ***");
         document.write("02. 함수가 실행되었습니다.");
     }
