--- a/javascript/javascript601.html
+++ b/javascript/javascript601.html
@@ -221,13 +221,13 @@
                 content: "데이터 실행하기 : ";
             }
             .ol4::before {
-                content: "데이터 제어하기 : ";
+            content: "데이터 제어하기 : ";
             }
             .ol5::before {
-                content: "데이터 연습하기 : ";
+                content: "데이터 내장 객체 : ";
             }
             .ol6::before {
-                content: "데이터 메서드 : ";
+                content: "데이터 공부하기 : ";
             }
     
             .view {
@@ -274,7 +274,6 @@
 </head>
 
 <body>
-
     <h1>Javascript 문법 정리</h1>
     <ol class="ol1">
         <li><a href="javascript100.html">변수</a></li>
@@ -296,17 +295,18 @@
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
     <ol class="ol5">
-        <li><a href="javascript400.html">알고리즘</a></li>
+        <li><a href="javascript602.html">문자열 객체</a></li>
+        <li><a href="javascript601.html">배열 객체</a></li>
+        <li><a href="javascript604.html">날짜 객체</a></li>
+        <li><a href="javascript609.html">수학 객체</a></li>
+        <li><a href="javascript608.html">숫자 객체</a></li>
+        <li><a href="javascript603.html">브라우저 객체</a></li>
+        <li><a href="javascript607.html">요소 객체</a></li>
+        <li><a href="javascript605.html">이벤트 객체</a></li>
     </ol>
     <ol class="ol6">
-        <li><a href="javascript601.html">배열 메서드</a></li>
-        <li><a href="javascript602.html">문자열 메서드</a></li>
-        <li><a href="javascript603.html">브라우저 메서드</a></li>
-        <li><a href="javascript604.html">날짜 메서드</a></li>
-        <li><a href="javascript605.html">이벤트 메서드</a></li>
-    </ol>
-    <ol class="ol7">
         <li><a href="javascript606.html">샘플</a></li>
+        <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
     
     <h2 class="mt20">배열 메서드</h2>
@@ -332,15 +332,7 @@
         <li><a href="#sample12">12. 배열 메서드 : map() : 배열 요소를 추출하여 새로운 배열로 만들기 : 반환(배열)</a></li>
         <li><a href="#sample13">13. 배열 메서드 : reduce() : 배열 요소를 하나로 정리하기 : 반환(결과값)</a></li>
         <li><a href="#sample13">13. 배열 메서드 : reduceRight() : 배열 요소를 하나로 정리하기 : 반환(결과값)</a></li>
-        <li><a href="#sample14">14. 배열 메서드 : Array.from() : 배열로 변환하기 : 반환(베열)</a></li>
-    </ul>
-
-    <hr>
-
-    <h2 class="mt20">배열 메서드 샘플</h2>
-    <ul>
-        <li><a href="javascriptSample602-1.html">01. charAt()를 이용한 CSS 속성 첫 글자 검색하기</a></li>
-        <li><a href="javascriptSample602-2.html">02. find()를 이용한 CSS 속성 검색하기</a></li>
+        <li><a href="#sample14">14. 배열 메서드 : Array.from() : 배열로 변환하기 : 반환(배열)</a></li>
     </ul>
 
     <hr>
