--- a/site/main.html
+++ b/site/main.html
@@ -7,7 +7,7 @@
     <meta name="author" content="kdong">                                            <!-- 누가 만들었는지 -->
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">      <!-- 사이트 설명 -->
     <meta name="keywords" content="크동, 사이트, 웹퍼블리셔, 프론트엔드개발자">         <!-- 키워드 -->
-    <title>CardType01</title>
+    <title>Site</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/fonts.css">                                    <!-- 폰트설정 css -->
@@ -19,19 +19,30 @@
     <!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->            <!-- 화면 탭의 아이콘(?) -->
 </head>
 <body>
-    <section id="cardType" class="cardType01">
+    <!-- header -->
+    <header id="header">
         <div class="container">
-            <div class="cardType01">
-                <h2>카드 유형1</h2>
-                <p>사이트 제작에서 많이 사용하는 카드 스타일입니다.</p>
-                <div class="card-box">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>4</div>
-                </div>
+            <div class="header">
+                <h1><a href="main.html">KDONG</a></h1>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">메뉴 아이템</a></li>
+                        <li><a href="#">메뉴 아이템</a></li>
+                        <li><a href="#">메뉴 아이템</a></li>
+                        <li><a href="#">메뉴 아이템</a></li>
+                        <li><a href="#">메뉴 아이템</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
+        
+    </header>
+    <!-- //header -->
+
+    <!-- section -->
+    <section>
+
     </section>
+    <!-- //section -->
 </body>
 </html>
