class='list' 추가

--- a/javascript/javascript400.html
+++ b/javascript/javascript400.html
@@ -280,7 +280,7 @@
         </nav>
 
     <h2 class="mt20">알고리즘</h2>
-    <ul>
+    <ul class="list">
         <li><a href="#sample01">01. 1부터 100까지 출력하기</a></li>
         <li><a href="#sample02">02. 1부터 100까지 출력하기 : 짝수만</a></li>
         <li><a href="#sample03">03. 1부터 100까지 출력하기 : 5의 배수만</a></li>
