--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -152,7 +152,6 @@
             .sample pre {
                 margin: 0 !important;
                 border-radius: 0;
-                ;
             }
     
             .sample .desc {
@@ -280,7 +279,7 @@
         </nav>
     
     <h2 class="mt20">데이터 불러오기</h2>
-    <ul>
+    <ul class="list">
         <li><a href="#sample01">01. 변수 : 데이터 불러오기 : 기본</a></li>
         <li><a href="#sample02">02. 상수 : 데이터 불러오기 : 기본</a></li>
         <li><a href="#sample03">03. 배열 : 데이터 불러오기 : 기본</a></li>
