--- a/javascript/javascript603.html
+++ b/javascript/javascript603.html
@@ -333,7 +333,7 @@
         </nav>
     
     <h2 class="mt20">브라우저 객체</h2>
-    <ul>
+    <ul class="list">
         <li><a href="#sample1">01. </a></li>
     </ul>
 
