--- a/javascript/javascript604.html
+++ b/javascript/javascript604.html
@@ -333,7 +333,7 @@
         </nav>
     
     <h2 class="mt20">날짜 객체</h2>
-    <ul>
+    <ul class="list">
         <li><a href="#sample01">01. 날짜 메서드 : getFullYear() : 연도 불러오기</a></li>
         <li><a href="#sample01">01. 날짜 메서드 : getMonth() : 월 불러오기</a></li>
         <li><a href="#sample01">01. 날짜 메서드 : getDate() : 일 불러오기</a></li>
