--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -280,7 +280,7 @@
         </nav>
     
     <h2 class="mt20">데이터 실행하기</h2>
-    <ul>
+    <ul class="list">
         <li><a href="#sample01">01. 선언적 함수</a></li>
         <li><a href="#sample02">02. 익명 함수</a></li>
         <li><a href="#sample03">03. 매개변수 함수</a></li>
