--- a/javascript/javascript602.html
+++ b/javascript/javascript602.html
@@ -340,7 +340,7 @@
         </nav>
     
     <h2 class="mt20">문자열 객체</h2>
-    <ul>
+    <ul class="list">
         <li><a href="#sample01">01. 문자열 메서드 : 문자열 결합 / 템플릿 문자열</a></li>
         <li><a href="#sample02">02. 문자열 속성 : length : 문자열 길이 구하기 : 반환(숫자)</a></li>
         <li><a href="#sample03">03. 문자열 메서드 : toUpperCase() : 문자열 대문자 변경하기 : 반환(문자열)</a></li>
