--- a/javascript/javascript606.html
+++ b/javascript/javascript606.html
@@ -340,19 +340,19 @@
         </nav>
     
     <h2 class="mt20">CSS : 문자열 객체 샘플</h2>
-    <ul>
+    <ul class="list">
         <li><a href="javascriptSample01.html">01. CSS 속성 첫 글자만 검색하기</a></li><a class="sam" href="javascript602.html">charAt()</a>
         <li><a href="javascriptSample02.html">02. CSS 속성 검색하면 설명 보여주기</a></li><a class="sam" href="javascript601.html">find()</a>
         <li><a href="javascriptSample03.html">03. CSS 속성 정렬하기</a></li><a class="sam" href="javascript601.html">sort()</a>
     </ul>
     <h2 class="mt20">HTML : 문자열 객체 샘플</h2>
-    <ul>
+    <ul class="list">
         <li><a href="javascriptSample04.html">01. HTML 속성 첫 글자만 검색하기</a></li></li><a class="sam" href="javascript602.html">charAt()</a>
         <li><a href="javascriptSample05.html">02. HTML 속성 검색하면 설명 보여주기</a></li><a class="sam" href="javascript601.html">find()</a>
         <li><a href="javascriptSample06.html">03. HTML 속성 정렬하기</a></li><a class="sam" href="javascript601.html">sort()</a>
     </ul>
     <h2 class="mt20">날짜 객체 샘플</h2>
-    <ul>
+    <ul class="list">
         <li><a href="javascriptSample07.html">01. 시계 만들기</a></li><a class="sam" href="javascriptSample07.html">getHours()</a>
     </ul>
 
