--- a/javascript/javascript607.html
+++ b/javascript/javascript607.html
@@ -333,7 +333,7 @@
         </nav>
     
     <h2 class="mt20">요소 객체</h2>
-    <ul>
+    <ul class="list">
         <li><a href="#">01. </a></li>
         <li><a href="#">02. </a></li>
         <li><a href="#">03. </a></li>
