--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -221,27 +221,34 @@
             color: #fff;
         }
         @media(max-width: 800px){
-            .menu li a {
-                font-size: 12px;
-                padding: 5px 20px;
+                body {
+                    font-size: 13px;
+                }
+                h1 {
+                    text-align: center;
+                }
+                .menu li a {
+                    font-size: 12px;
+                    padding: 5px 20px;
+                }
+                .lis li {
+                    line-height: 1.2;
+                }
+                .list a {
+                    font-size: 12px;
+                }
+                .sample h2 {
+                    font-size: 14px;
+                    font-weight: normal;
+                    padding: 7px 5px 5px;
+                }
+                .sample h2 .dot {
+                    display: none;
+                }
+                .sample pre {
+                    font-size: 14px;
+                }
             }
-            .lis li {
-                line-height: 1.2;
-            }
-            .list a {
-                font-size: 12px;
-            }
-            .sample h2 {
-                padding: 12px 10px;
-                font-size: 14px;
-            }
-            .sample h2 .dot {
-                display: none;
-            }
-            .sample pre {
-                font-size: 14px;
-            }
-        }
     </style>
 </head>
 
