--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -222,6 +222,12 @@
                 color: #fff;
             }
             @media(max-width: 800px){
+                body {
+                    font-size: 13px;
+                }
+                h1 {
+                    text-align: center;
+                }
                 .menu li a {
                     font-size: 12px;
                     padding: 5px 20px;
@@ -233,8 +239,9 @@
                     font-size: 12px;
                 }
                 .sample h2 {
-                    padding: 12px 10px;
                     font-size: 14px;
+                    font-weight: normal;
+                    padding: 7px 5px 5px;
                 }
                 .sample h2 .dot {
                     display: none;
