--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -38,7 +38,8 @@
             }
     
             h1 {
-                padding: 20px 0;
+                padding-top: 40px;
+                padding-bottom: 20px;
             }
     
             h1 a {
@@ -221,6 +222,12 @@
                 color: #fff;
             }
             @media(max-width: 800px){
+                body {
+                    font-size: 13px;
+                }
+                h1 {
+                    text-align: center;
+                }
                 .menu li a {
                     font-size: 12px;
                     padding: 5px 20px;
@@ -232,8 +239,9 @@
                     font-size: 12px;
                 }
                 .sample h2 {
-                    padding: 12px 10px;
                     font-size: 14px;
+                    font-weight: normal;
+                    padding: 7px 5px 5px;
                 }
                 .sample h2 .dot {
                     display: none;
