--- a/javascript/javascript608.html
+++ b/javascript/javascript608.html
@@ -332,13 +332,13 @@
             </ul>
         </nav>
     
-    <h2 class="mt20">숫자 객체</h2>
+    <h2 class="mt20">수학 객체</h2>
     <ul class="list">
         <li><a href="#">01. </a></li>
         <li><a href="#">02. </a></li>
         <li><a href="#">03. </a></li>
     </ul>
-    
+
     <hr>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
