--- a/javascript/javascript604.html
+++ b/javascript/javascript604.html
@@ -267,7 +267,7 @@
                     font-size: 12px;
                     padding: 5px 20px;
                 }
-                .lis li {
+                .list li {
                     line-height: 1.2;
                 }
                 .list a {
@@ -333,20 +333,20 @@
         </nav>
     
     <h2 class="mt20">날짜 객체</h2>
-    <ul class="list">
-        <li><a href="#sample01">01. 날짜 메서드 : getFullYear() : 연도 불러오기</a></li>
-        <li><a href="#sample01">01. 날짜 메서드 : getMonth() : 월 불러오기</a></li>
-        <li><a href="#sample01">01. 날짜 메서드 : getDate() : 일 불러오기</a></li>
-        <li><a href="#sample01">01. 날짜 메서드 : getHours() : 시간 불러오기</a></li>
-        <li><a href="#sample01">01. 날짜 메서드 : getMinutes() : 분 불러오기</a></li>
-        <li><a href="#sample01">01. 날짜 메서드 : getSeconds() : 초 불러오기</a></li>
-        <li><a href="#sample01">01. 날짜 메서드 : getMilliseconds() : 밀리초 불러오기</a></li>
-        <li><a href="#sample01">01. 날짜 메서드 : getDay() : 요일 불러오기</a></li>
-        <li><a href="#sample02">02. 날짜 메서드 : toLocaleString() : 현재 날짜와 시각 문자열 불러오기</a></li>  
-        <li><a href="#sample02">02. 날짜 메서드 : toLocaleDateString() : 현재 날짜 문자열 불러오기</a></li>  <!-- 팝업에서 많이 사용 -->
-        <li><a href="#sample02">02. 날짜 메서드 : toLocaleTimeString() : 현재 시각 문자열 불러오기</a></li>
-        <li><a href="#sample03">03. 날짜 메서드 : Date.parse() : 날짜 문자열 타임스탬프 불러오기</a></li>
-    </ul>
+    <ol class="list">
+        <li><a href="#sample01">날짜 메서드 : getFullYear() : 연도 불러오기</a></li>
+        <li><a href="#sample01">날짜 메서드 : getMonth() : 월 불러오기</a></li>
+        <li><a href="#sample01">날짜 메서드 : getDate() : 일 불러오기</a></li>
+        <li><a href="#sample01">날짜 메서드 : getHours() : 시간 불러오기</a></li>
+        <li><a href="#sample01">날짜 메서드 : getMinutes() : 분 불러오기</a></li>
+        <li><a href="#sample01">날짜 메서드 : getSeconds() : 초 불러오기</a></li>
+        <li><a href="#sample01">날짜 메서드 : getMilliseconds() : 밀리초 불러오기</a></li>
+        <li><a href="#sample01">날짜 메서드 : getDay() : 요일 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : toLocaleString() : 현재 날짜와 시각 문자열 불러오기</a></li>  
+        <li><a href="#sample02">날짜 메서드 : toLocaleDateString() : 현재 날짜 문자열 불러오기</a></li>  <!-- 팝업에서 많이 사용 -->
+        <li><a href="#sample02">날짜 메서드 : toLocaleTimeString() : 현재 시각 문자열 불러오기</a></li>
+        <li><a href="#sample03">날짜 메서드 : Date.parse() : 날짜 문자열 타임스탬프 불러오기</a></li>
+    </ol>
 
     <hr>
 
