--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -231,7 +231,7 @@
                     font-size: 12px;
                     padding: 5px 20px;
                 }
-                .lis li {
+                .list li {
                     line-height: 1.2;
                 }
                 .list a {
@@ -286,27 +286,27 @@
     </nav>
     
     <h2 class="mt20">데이터 저장하기</h2>
-    <ul class="list">
-        <li><a href="#sample01">01. 변수 : 데이터 저장</a></li>
-        <li><a href="#sample02">02. 변수 : 데이터 저장 + 데이터 변경</a></li>
-        <li><a href="#sample03">03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</a></li>
-        <li><a href="#sample04">04. 상수 : 데이터 저장 (변하지 않음)</a></li>
-        <li><a href="#sample05">05. 배열 : 데이터 저장 (여러개) : 표현 방법1</a></li>
-        <li><a href="#sample06">06. 배열 : 데이터 저장 (여러개) : 표현 방법2</a></li>
-        <li><a href="#sample07">07. 배열 : 데이터 저장 (여러개) : 표현 방법3</a></li>
-        <li><a href="#sample08">08. 배열 : 데이터 저장 (여러개) : 표현 방법4</a></li>
-        <li><a href="#sample09">09. 객체 : 데이터 저장 (키와 값) : 표현 방법1 : 객체 스타일</a></li>
-        <li><a href="#sample10">10. 객체 : 데이터 저장 (키와 값) : 표현 방법2 : 배열 스타일</a></li>
-        <li><a href="#sample11">11. 객체 : 데이터 저장 (키와 값) : 표현 방법3</a></li>
-        <li><a href="#sample12">12. 객체 : 데이터 저장 (키와 값) : 표현 방법4</a></li>
-        <li><a href="#sample13">13. 객체 : 데이터 저장 (키와 값) : 표현 방법5 : 배열 속에 객체</a></li>
-        <li><a href="#sample14">14. 객체 : 데이터 저장 (키와 값) : 표현 방법6 : 객체 속에 배열</a></li>
-        <li><a href="#sample15">15. 객체 : 데이터 저장 (키와 값) : 표현 방법7 : 객체 속에 변수</a></li>
-        <li><a href="#sample16">16. 객체 : 데이터 저장 (키와 값) : 표현 방법8 : 객체 속에 함수</a></li>
-        <li><a href="#sample17">17. 추가 : 변수의 종류 : 전역변수, 지역변수</a></li>
-        <li><a href="#sample18">18. 추가 : 변수의 변환 : 형 변환</a></li>
-        <li><a href="#sample19">19. 추가 : 변수의 유형 : 데이터 타입</a></li>
-    </ul>
+    <ol class="list">
+        <li><a href="#sample01">변수 : 데이터 저장</a></li>
+        <li><a href="#sample02">변수 : 데이터 저장 + 데이터 변경</a></li>
+        <li><a href="#sample03">변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</a></li>
+        <li><a href="#sample04">상수 : 데이터 저장 (변하지 않음)</a></li>
+        <li><a href="#sample05">배열 : 데이터 저장 (여러개) : 표현 방법1</a></li>
+        <li><a href="#sample06">배열 : 데이터 저장 (여러개) : 표현 방법2</a></li>
+        <li><a href="#sample07">배열 : 데이터 저장 (여러개) : 표현 방법3</a></li>
+        <li><a href="#sample08">배열 : 데이터 저장 (여러개) : 표현 방법4</a></li>
+        <li><a href="#sample09">객체 : 데이터 저장 (키와 값) : 표현 방법1 : 객체 스타일</a></li>
+        <li><a href="#sample10">객체 : 데이터 저장 (키와 값) : 표현 방법2 : 배열 스타일</a></li>
+        <li><a href="#sample11">객체 : 데이터 저장 (키와 값) : 표현 방법3</a></li>
+        <li><a href="#sample12">객체 : 데이터 저장 (키와 값) : 표현 방법4</a></li>
+        <li><a href="#sample13">객체 : 데이터 저장 (키와 값) : 표현 방법5 : 배열 속에 객체</a></li>
+        <li><a href="#sample14">객체 : 데이터 저장 (키와 값) : 표현 방법6 : 객체 속에 배열</a></li>
+        <li><a href="#sample15">객체 : 데이터 저장 (키와 값) : 표현 방법7 : 객체 속에 변수</a></li>
+        <li><a href="#sample16">객체 : 데이터 저장 (키와 값) : 표현 방법8 : 객체 속에 함수</a></li>
+        <li><a href="#sample17">추가 : 변수의 종류 : 전역변수, 지역변수</a></li>
+        <li><a href="#sample18">추가 : 변수의 변환 : 형 변환</a></li>
+        <li><a href="#sample19">추가 : 변수의 유형 : 데이터 타입</a></li>
+    </ol>
 
     <hr>
     
