--- a/javascript/javascript200.html
+++ b/javascript/javascript200.html
@@ -231,7 +231,7 @@
                         font-size: 12px;
                         padding: 5px 20px;
                     }
-                    .lis li {
+                    .list li {
                         line-height: 1.2;
                     }
                     .list a {
@@ -286,23 +286,23 @@
         </nav>
     
     <h2 class="mt20">데이터 제어하기</h2>
-    <ul class="list">
-        <li><a href="#sample01">01. if문</a></li>
-        <li><a href="#sample02">02. 다중 if문</a></li>
-        <li><a href="#sample03">03. 중첩 if문</a></li>
-        <li><a href="#sample04">04. switch문</a></li>
-        <li><a href="#sample05">05. 조건부 연산자(삼항 연산자)</a></li>
-        <li><a href="#sample06">06. if문 생략</a></li>
-        <li><a href="#sample07">07. while문</a></li>
-        <li><a href="#sample08">08. do while문</a></li>
-        <li><a href="#sample09">09. for문</a></li> 
-        <li><a href="#sample10">10. 중첩 for문</a></li>
-        <li><a href="#sample11">11. forEach문()</a></li>
-        <li><a href="#sample12">12. for of문</a></li>
-        <li><a href="#sample13">13. for in문</a></li>
-        <li><a href="#sample14">14. break문</a></li>
-        <li><a href="#sample15">15. continue문</a></li>
-    </ul>
+    <ol class="list">
+        <li><a href="#sample01">if문</a></li>
+        <li><a href="#sample02">다중 if문</a></li>
+        <li><a href="#sample03">중첩 if문</a></li>
+        <li><a href="#sample04">switch문</a></li>
+        <li><a href="#sample05">조건부 연산자(삼항 연산자)</a></li>
+        <li><a href="#sample06">if문 생략</a></li>
+        <li><a href="#sample07">while문</a></li>
+        <li><a href="#sample08">do while문</a></li>
+        <li><a href="#sample09">for문</a></li> 
+        <li><a href="#sample10">중첩 for문</a></li>
+        <li><a href="#sample11">forEach문()</a></li>
+        <li><a href="#sample12">for of문</a></li>
+        <li><a href="#sample13">for in문</a></li>
+        <li><a href="#sample14">break문</a></li>
+        <li><a href="#sample15">continue문</a></li>
+    </ol>
 
     <hr>
 
