--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -231,7 +231,7 @@
                         font-size: 12px;
                         padding: 5px 20px;
                     }
-                    .lis li {
+                    .list li {
                         line-height: 1.2;
                     }
                     .list a {
@@ -286,27 +286,27 @@
         </nav>
     
     <h2 class="mt20">데이터 실행하기</h2>
-    <ul class="list">
-        <li><a href="#sample01">01. 선언적 함수</a></li>
-        <li><a href="#sample02">02. 익명 함수</a></li>
-        <li><a href="#sample03">03. 매개변수 함수</a></li>
-        <li><a href="#sample04">04. 리턴값 함수</a></li>
-        <li><a href="#sample05">05. 화살표 함수 : 선언적 함수</a></li>
-        <li><a href="#sample06">06. 화살표 함수 : 익명함수</a></li>
-        <li><a href="#sample07">07. 화살표 함수 : 리턴값 함수</a></li>
-        <li><a href="#sample08">08. 화살표 함수 : 익명함수 + 매개변수 + 리턴값</a></li>
-        <li><a href="#sample09">09. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 괄호생략</a></li>
-        <li><a href="#sample10">10. 화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 매개변수 괄호생략 + 리턴 생략</a></li>
-        <li><a href="#sample11">11. 화살표 함수 : 선언적함수 + 매개변수 + 리턴값 + 매개변수 괄호생략 + 리턴 생략</a></li>
-        <li><a href="#sample12">12. 내부 함수</a></li>
-        <li><a href="#sample13">13. 즉시 실행 함수</a></li>
-        <li><a href="#sample14">14. 파라미터 함수</a></li>
-        <li><a href="#sample15">15. 아규먼트 함수</a></li>
-        <li><a href="#sample16">16. 재귀 함수</a></li>
-        <li><a href="#sample17">17. 콜백 함수</a></li>
-        <li><a href="#sample18">18. 콜백 함수 : 반복문</a></li>
-        <li><a href="#sample19">19. 콜백 함수 : 동기/비동기</a></li>
-    </ul>
+    <ol class="list">
+        <li><a href="#sample01">선언적 함수</a></li>
+        <li><a href="#sample02">익명 함수</a></li>
+        <li><a href="#sample03">매개변수 함수</a></li>
+        <li><a href="#sample04">리턴값 함수</a></li>
+        <li><a href="#sample05">화살표 함수 : 선언적 함수</a></li>
+        <li><a href="#sample06">화살표 함수 : 익명함수</a></li>
+        <li><a href="#sample07">화살표 함수 : 리턴값 함수</a></li>
+        <li><a href="#sample08">화살표 함수 : 익명함수 + 매개변수 + 리턴값</a></li>
+        <li><a href="#sample09">화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 괄호생략</a></li>
+        <li><a href="#sample10">화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 매개변수 괄호생략 + 리턴 생략</a></li>
+        <li><a href="#sample11">화살표 함수 : 선언적함수 + 매개변수 + 리턴값 + 매개변수 괄호생략 + 리턴 생략</a></li>
+        <li><a href="#sample12">내부 함수</a></li>
+        <li><a href="#sample13">즉시 실행 함수</a></li>
+        <li><a href="#sample14">파라미터 함수</a></li>
+        <li><a href="#sample15">아규먼트 함수</a></li>
+        <li><a href="#sample16">재귀 함수</a></li>
+        <li><a href="#sample17">콜백 함수</a></li>
+        <li><a href="#sample18">콜백 함수 : 반복문</a></li>
+        <li><a href="#sample19">콜백 함수 : 동기/비동기</a></li>
+    </ol>
 
     <h2 class="mt20">데이터 실행 : 함수</h2>
     <ul>
