--- a/javascript/javascript400.html
+++ b/javascript/javascript400.html
@@ -231,7 +231,7 @@
                         font-size: 12px;
                         padding: 5px 20px;
                     }
-                    .lis li {
+                    .list li {
                         line-height: 1.2;
                     }
                     .list a {
@@ -286,17 +286,17 @@
         </nav>
 
     <h2 class="mt20">알고리즘</h2>
-    <ul class="list">
-        <li><a href="#sample01">01. 1부터 100까지 출력하기</a></li>
-        <li><a href="#sample02">02. 1부터 100까지 출력하기 : 짝수만</a></li>
-        <li><a href="#sample03">03. 1부터 100까지 출력하기 : 5의 배수만</a></li>
-        <li><a href="#sample04">04. 1부터 100까지 출력하기 : 짝수는 빨간색, 홀수는 파란색 출력</a></li>
-        <li><a href="#sample05">05. 1부터 100까지 합 출력하기</a></li>
-        <li><a href="#sample06">06. 구구단 출력하기</a></li>
-        <li><a href="#sample07">07. 테이블 만들기1</a></li>
-        <li><a href="#sample08">08. 테이블 만들기2</a></li>
-        <li><a href="#sample09">09. 테이블 만들기3 - 짝수만</a></li>
-    </ul>
+    <ol class="list">
+        <li><a href="#sample01">1부터 100까지 출력하기</a></li>
+        <li><a href="#sample02">1부터 100까지 출력하기 : 짝수만</a></li>
+        <li><a href="#sample03">1부터 100까지 출력하기 : 5의 배수만</a></li>
+        <li><a href="#sample04">1부터 100까지 출력하기 : 짝수는 빨간색, 홀수는 파란색 출력</a></li>
+        <li><a href="#sample05">1부터 100까지 합 출력하기</a></li>
+        <li><a href="#sample06">구구단 출력하기</a></li>
+        <li><a href="#sample07">테이블 만들기1</a></li>
+        <li><a href="#sample08">테이블 만들기2</a></li>
+        <li><a href="#sample09">테이블 만들기3 - 짝수만</a></li>
+    </ol>
 
     <hr>
 
