--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -231,7 +231,7 @@
                         font-size: 12px;
                         padding: 5px 20px;
                     }
-                    .lis li {
+                    .list li {
                         line-height: 1.2;
                     }
                     .list a {
@@ -286,30 +286,30 @@
         </nav>
     
     <h2 class="mt20">데이터 불러오기</h2>
-    <ul class="list">
-        <li><a href="#sample01">01. 변수 : 데이터 불러오기 : 기본</a></li>
-        <li><a href="#sample02">02. 상수 : 데이터 불러오기 : 기본</a></li>
-        <li><a href="#sample03">03. 배열 : 데이터 불러오기 : 기본</a></li>
-        <li><a href="#sample04">04. 배열 : 데이터 불러오기 : 2차 배열 </a></li>
-        <li><a href="#sample05">05. 배열 : 데이터 불러오기 : 갯수 구하기</a></li>
-        <li><a href="#sample06">06. 배열 : 데이터 불러오기 : for문</a></li>
-        <li><a href="#sample07">07. 배열 : 데이터 불러오기 : forEach()</a></li>
-        <li><a href="#sample08">08. 배열 : 데이터 불러오기 : for of문</a></li>
-        <li><a href="#sample09">09. 배열 : 데이터 불러오기 : for in문</a></li>
-        <li><a href="#sample10">10. 배열 : 데이터 불러오기 : map()문</a></li>
-        <li><a href="#sample11">11. 배열 : 데이터 불러오기 : 펼침 연산자</a></li>
-        <li><a href="#sample12">12. 객체 : 데이터 불러오기 : 기본</a></li>
-        <li><a href="#sample13">13. 객체 : 데이터 불러오기 : Object</a></li>
-        <li><a href="#sample14">14. 객체 : 데이터 불러오기 : 변수</a></li>
-        <li><a href="#sample15">15. 객체 : 데이터 불러오기 : for in문</a></li>
-        <li><a href="#sample16">16. 객체 : 데이터 불러오기 : map()</a></li>
-        <li><a href="#sample17">17. 객체 : 데이터 불러오기 : hasOwnProperty</a></li>
-        <li><a href="#sample18">18. 객체 : 데이터 불러오기 : 펼침 연산자 - 복사</a></li>
-        <li><a href="#sample19">19. 객체 : 데이터 불러오기 : 펼침 연산자 - 추가</a></li>
-        <li><a href="#sample20">20. 객체 : 데이터 불러오기 : 펼침 연산자 - 결합</a></li>
-        <li><a href="#sample21">21. 객체 : 데이터 불러오기 : 비구조화 할당</a></li>
-        <li><a href="#sample22">22. 객체 : 데이터 불러오기 : 비구조화 할당 : 별도 이름 저장</a></li>
-    </ul>
+    <ol class="list">
+        <li><a href="#sample01">변수 : 데이터 불러오기 : 기본</a></li>
+        <li><a href="#sample02">상수 : 데이터 불러오기 : 기본</a></li>
+        <li><a href="#sample03">배열 : 데이터 불러오기 : 기본</a></li>
+        <li><a href="#sample04">배열 : 데이터 불러오기 : 2차 배열 </a></li>
+        <li><a href="#sample05">배열 : 데이터 불러오기 : 갯수 구하기</a></li>
+        <li><a href="#sample06">배열 : 데이터 불러오기 : for문</a></li>
+        <li><a href="#sample07">배열 : 데이터 불러오기 : forEach()</a></li>
+        <li><a href="#sample08">배열 : 데이터 불러오기 : for of문</a></li>
+        <li><a href="#sample09">배열 : 데이터 불러오기 : for in문</a></li>
+        <li><a href="#sample10">배열 : 데이터 불러오기 : map()문</a></li>
+        <li><a href="#sample11">배열 : 데이터 불러오기 : 펼침 연산자</a></li>
+        <li><a href="#sample12">객체 : 데이터 불러오기 : 기본</a></li>
+        <li><a href="#sample13">객체 : 데이터 불러오기 : Object</a></li>
+        <li><a href="#sample14">객체 : 데이터 불러오기 : 변수</a></li>
+        <li><a href="#sample15">객체 : 데이터 불러오기 : for in문</a></li>
+        <li><a href="#sample16">객체 : 데이터 불러오기 : map()</a></li>
+        <li><a href="#sample17">객체 : 데이터 불러오기 : hasOwnProperty</a></li>
+        <li><a href="#sample18">객체 : 데이터 불러오기 : 펼침 연산자 - 복사</a></li>
+        <li><a href="#sample19">객체 : 데이터 불러오기 : 펼침 연산자 - 추가</a></li>
+        <li><a href="#sample20">객체 : 데이터 불러오기 : 펼침 연산자 - 결합</a></li>
+        <li><a href="#sample21">객체 : 데이터 불러오기 : 비구조화 할당</a></li>
+        <li><a href="#sample22">객체 : 데이터 불러오기 : 비구조화 할당 : 별도 이름 저장</a></li>
+    </ol>
     
     <hr>
 
