--- a/javascript/javascript606.html
+++ b/javascript/javascript606.html
@@ -30,6 +30,7 @@
                 padding: 0;
                 font-family: 'NEXON Lv1 Gothic OTF';
                 line-height: 1.6;
+                word-break: break-all;
             }
     
             body {
@@ -274,7 +275,7 @@
                     font-size: 12px;
                     padding: 5px 20px;
                 }
-                .lis li {
+                .list li {
                     line-height: 1.2;
                 }
                 .list a {
@@ -340,21 +341,21 @@
         </nav>
     
     <h2 class="mt20">CSS : 문자열 객체 샘플</h2>
-    <ul class="list">
-        <li><a href="javascriptSample01.html">01. CSS 속성 첫 글자만 검색하기</a></li><a class="sam" href="javascript602.html">charAt()</a>
-        <li><a href="javascriptSample02.html">02. CSS 속성 검색하면 설명 보여주기</a></li><a class="sam" href="javascript601.html">find()</a>
-        <li><a href="javascriptSample03.html">03. CSS 속성 정렬하기</a></li><a class="sam" href="javascript601.html">sort()</a>
-    </ul>
+    <ol class="list">
+        <li><a href="javascriptSample01.html">CSS 속성 첫 글자만 검색하기</a></li><a class="sam" href="javascript602.html">charAt()</a>
+        <li><a href="javascriptSample02.html">CSS 속성 검색하면 설명 보여주기</a></li><a class="sam" href="javascript601.html">find()</a>
+        <li><a href="javascriptSample03.html">CSS 속성 정렬하기</a></li><a class="sam" href="javascript601.html">sort()</a>
+    </ol>
     <h2 class="mt20">HTML : 문자열 객체 샘플</h2>
-    <ul class="list">
-        <li><a href="javascriptSample04.html">01. HTML 속성 첫 글자만 검색하기</a></li></li><a class="sam" href="javascript602.html">charAt()</a>
-        <li><a href="javascriptSample05.html">02. HTML 속성 검색하면 설명 보여주기</a></li><a class="sam" href="javascript601.html">find()</a>
-        <li><a href="javascriptSample06.html">03. HTML 속성 정렬하기</a></li><a class="sam" href="javascript601.html">sort()</a>
-    </ul>
+    <ol class="list">
+        <li><a href="javascriptSample04.html">HTML 속성 첫 글자만 검색하기</a></li></li><a class="sam" href="javascript602.html">charAt()</a>
+        <li><a href="javascriptSample05.html">HTML 속성 검색하면 설명 보여주기</a></li><a class="sam" href="javascript601.html">find()</a>
+        <li><a href="javascriptSample06.html">HTML 속성 정렬하기</a></li><a class="sam" href="javascript601.html">sort()</a>
+    </ol>
     <h2 class="mt20">날짜 객체 샘플</h2>
-    <ul class="list">
-        <li><a href="javascriptSample07.html">01. 시계 만들기</a></li><a class="sam" href="javascriptSample07.html">getHours()</a>
-    </ul>
+    <ol class="list">
+        <li><a href="javascriptSample07.html">시계 만들기</a></li><a class="sam" href="javascriptSample07.html">getHours()</a>
+    </ol>
 
     <hr>
 
