--- a/javascript/javascript608.html
+++ b/javascript/javascript608.html
@@ -267,7 +267,7 @@
                     font-size: 12px;
                     padding: 5px 20px;
                 }
-                .lis li {
+                .list li {
                     line-height: 1.2;
                 }
                 .list a {
