--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -296,6 +296,7 @@
         <li><a href="#sample07">화살표 함수 : 리턴값 함수</a></li>
         <li><a href="#sample08">화살표 함수 : 익명함수 + 매개변수 + 리턴값</a></li>
         <li><a href="#sample09">화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 괄호생략</a></li>
+        
         <li><a href="#sample10">화살표 함수 : 익명함수 + 매개변수 + 리턴값 + 매개변수 괄호생략 + 리턴 생략</a></li>
         <li><a href="#sample11">화살표 함수 : 선언적함수 + 매개변수 + 리턴값 + 매개변수 괄호생략 + 리턴 생략</a></li>
         <li><a href="#sample12">내부 함수</a></li>
@@ -308,13 +309,13 @@
         <li><a href="#sample19">콜백 함수 : 동기/비동기</a></li>
     </ol>
 
-    <h2 class="mt20">데이터 실행 : 함수</h2>
+    <!-- <h2 class="mt20">데이터 실행 : 함수</h2>
     <ul>
         <li>01. setInterval()</li>
         <li>01. clearInterval()</li>
         <li>02. setTimeout()</li>
         <li>02. clearTimeout()</li>
-    </ul>
+    </ul> -->
 
     <hr>
 
