--- a/javascript/index.html
+++ b/javascript/index.html
@@ -83,6 +83,23 @@
             color: #fff;
             
         }
+        .page {
+            font-family: 'NEXON Lv1 Gothic OTF';
+            position: absolute;
+            right: 20px;
+            top: 15px;
+        }
+        .page li {
+            display: inline-block;
+            list-style: none;
+        }
+        .page li a {
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover {
+            color: #09db09;
+        }
         @media(max-width: 800px){
             #wrap {
                 height: auto;
@@ -415,6 +432,9 @@
             </div>
             <h1>Javascript</h1>
             <p>자바스크립트 레퍼런스 북입니다.</p>
+            <ul class="page">
+                <li><a href="../index.html">HOME</a></li>
+            </ul>
             <nav class="menu">
                 <ul>
                     <li><a href="javascript100.html">데이터 저장하기</a></li>
