--- a/javascript-1/index.html
+++ b/javascript-1/index.html
@@ -81,7 +81,24 @@
         .menu li a:hover {
             box-shadow: inset 0 -100px 0 #0e43f1;
             color: #fff;
-            border-style: solid;
+            
+        }
+        .page {
+            font-family: 'NEXON Lv1 Gothic OTF';
+            position: absolute;
+            right: 20px;
+            top: 15px;
+        }
+        .page li {
+            display: inline-block;
+            list-style: none;
+        }
+        .page li a {
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover {
+            color: #09db09;
         }
         @media(max-width: 800px){
             #wrap {
@@ -415,6 +432,9 @@
             </div>
             <h1>Javascript</h1>
             <p>자바스크립트 레퍼런스 북입니다.</p>
+            <ul class="page">
+                <li><a href="../index.html">Main</a></li>
+            </ul>
             <nav class="menu">
                 <ul>
                     <li><a href="javascriptRefer01.html">데이터 저장하기</a></li>
@@ -430,6 +450,7 @@
                     <li><a href="javascriptRefer09.html">브라우저 객체</a></li>
                     <li><a href="javascriptRefer10.html">요소 객체</a></li>
                     <li><a href="javascriptRefer11.html">이벤트 객체</a></li>
+                    <!-- <li><a href="javascriptRefer12.html">숫자 객체</a></li> -->
                 </ul>
                 <ul>
                     <li><a href="javascriptRefer12.html">샘플</a></li>
