--- a/javascript/index.html
+++ b/javascript/index.html
@@ -81,24 +81,54 @@
         .menu li a:hover {
             box-shadow: inset 0 -100px 0 #0e43f1;
             color: #fff;
-            
+            border-style: solid;
         }
         .page {
-            font-family: 'NEXON Lv1 Gothic OTF';
             position: absolute;
-            right: 20px;
-            top: 15px;
+            right: 35px;
+            top: 35px;
         }
         .page li {
-            display: inline-block;
+            display: inline; /* inline-block(?) */
             list-style: none;
         }
         .page li a {
             text-decoration: none;
             color: #222;
         }
-        .page li a:hover {
-            color: #09db09;
+        .page li a {
+            color: #fff
+        }
+        .design {
+            position: absolute;
+            left: 35px;
+            top: 35px;
+        }
+        .design li {
+            display: inline;
+        }
+        .design li a {
+            font-family: 'NEXON Lv1 Gothic OTF';
+            list-style: none;
+            color: #0e43f1;
+            border: 1px dashed #0e43f1;
+            border-radius: 50px;
+            font-size: 12px;
+            display: inline-block;
+            padding: 5px 10px;
+            margin: 13px 0 0 15px;
+            box-shadow: inset 0 0 0 #0e43f1;
+            transition: all 0.4s;
+        }
+        .design li a.active {
+            background-color: gold;
+            border-color: gold;
+            color: #fff;
+        }
+        .design li a:hover {
+            box-shadow: inset 0 -100px 0 #0e43f1;
+            color: #fff;
+            border-style: solid;
         }
         @media(max-width: 800px){
             #wrap {
@@ -115,6 +145,19 @@
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
+            }
+            .page {
+                position: absolute;
+                right: 20px;
+                top: 15px;
+            }
+            .page li a {
+                color: #fff
+            }
+            .design {
+                position: absolute;
+                left: 15px;
+                top: 15px;
             }
         }
 
@@ -432,29 +475,35 @@
             </div>
             <h1>Javascript</h1>
             <p>자바스크립트 레퍼런스 북입니다.</p>
+
             <ul class="page">
-                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../index.html" height="5" width="10"><img src="../assets/img/svg-carrot.svg" alt="메인">Main</a></li>
             </ul>
+
+            <ul class="design">
+                <li><a class="active" href="../javascript/index.html">Design1</a></li>
+                <li><a href="../javascript-1/index.html">Design2</a></li>
+            </ul>
+
             <nav class="menu">
                 <ul>
-                    <li><a href="javascript100.html">데이터 저장하기</a></li>
-                    <li><a href="javascript500.html">데이터 불러오기</a></li>
-                    <li><a href="javascript300.html">데이터 실행하기</a></li>
-                    <li><a href="javascript200.html">데이터 제어하기</a></li>
+                    <li><a href="javascriptRefer01.html">데이터 저장하기</a></li>
+                    <li><a href="javascriptRefer02.html">데이터 불러오기</a></li>
+                    <li><a href="javascriptRefer03.html">데이터 실행하기</a></li>
+                    <li><a href="javascriptRefer04.html">데이터 제어하기</a></li>
                 </ul>
                 <ul>
-                    <li><a href="javascript602.html">문자열 객체</a></li>
-                    <li><a href="javascript601.html">배열 객체</a></li>
-                    <li><a href="javascript604.html">날짜 객체</a></li>
-                    <li><a href="javascript609.html">수학 객체</a></li>
-                    <li><a href="javascript608.html">숫자 객체</a></li>
-                    <li><a href="javascript603.html">브라우저 객체</a></li>
-                    <li><a href="javascript607.html">요소 객체</a></li>
-                    <li><a href="javascript605.html">이벤트 객체</a></li>
+                    <li><a href="javascriptRefer05.html">문자열 객체</a></li>
+                    <li><a href="javascriptRefer06.html">배열 객체</a></li>
+                    <li><a href="javascriptRefer07.html">날짜 객체</a></li>
+                    <li><a href="javascriptRefer08.html">수학 객체</a></li>
+                    <li><a href="javascriptRefer09.html">브라우저 객체</a></li>
+                    <li><a href="javascriptRefer10.html">요소 객체</a></li>
+                    <li><a href="javascriptRefer11.html">이벤트 객체</a></li>
                 </ul>
                 <ul>
-                    <li><a href="javascript606.html">샘플</a></li>
-                    <li><a href="javascript400.html">알고리즘</a></li>
+                    <li><a href="javascriptRefer12.html">샘플</a></li>
+                    <li><a href="javascriptRefer13.html">알고리즘</a></li>
                 </ul>
             </nav>
         </main>
