--- a/javascript-1/javascript100.html
+++ b/javascript-1/javascript100.html
@@ -230,7 +230,7 @@
             top: 15px;
         }
         .page li {
-            display: inline-block;
+            display: inline;
             list-style: none;
         }
         .page li a {
@@ -240,6 +240,36 @@
         .page li a:hover {
             color: #09db09;
         }
+        @media(max-width: 800px){
+                body {
+                    padding: 5%;
+                    font-size: 13px;
+                }
+                h1 {
+                    text-align: center;
+                }
+                .menu li a {
+                    font-size: 12px;
+                    padding: 5px 20px;
+                }
+                .list li {
+                    line-height: 1.2;
+                }
+                .list a {
+                    font-size: 12px;
+                }
+                .sample h2 {
+                    font-size: 14px;
+                    font-weight: normal;
+                    padding: 7px 5px 5px;
+                }
+                .sample h2 .dot {
+                    display: none;
+                }
+                .sample pre {
+                    font-size: 14px;
+                }
+            }
     </style>
 </head>
 
