--- a/javascript/index.html
+++ b/javascript/index.html
@@ -104,7 +104,7 @@
             left: 35px;
             top: 35px;
         }
-        .design li {
+        /* .design li {
             display: inline;
         }
         .design li a {
@@ -121,9 +121,9 @@
             transition: all 0.4s;
         }
         .design li a.active {
-            background-color: #fff;
+            background-color: #0e43f1;
             border-color: #0e43f1;
-            color: #0e43f1;
+            color: #fff;
         }
         .design li a.passive {
             background-color: #cd4f5d;
@@ -139,7 +139,7 @@
             box-shadow: inset 0 -100px 0 #0e43f1;
             color: #fff;
             border-style: solid;
-        }
+        } */
         @media(max-width: 800px){
             #wrap {
                 height: auto;
@@ -490,10 +490,10 @@
                 <li><a href="../index.html" height="5" width="10"><img src="../assets/img/svg-carrot.svg" alt="메인">Main</a></li>
             </ul>
 
-            <ul class="design">
+            <!-- <ul class="design">
                 <li><a class="active" href="../javascript/index.html">Design1</a></li>
                 <li><a class="passive" href="../javascript-1/index.html">Design2</a></li>
-            </ul>
+            </ul> -->
 
             <nav class="menu">
                 <ul>
