--- a/javascript/javascriptRefer06.html
+++ b/javascript/javascriptRefer06.html
@@ -296,7 +296,7 @@
         <li><a href="../index.html">MAIN</a></li>
         <li><a href="../refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
-        <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+        <li><a href="../javascript/index.html">JAVASCRIPT</a></li>
     </ul>
 
     <nav class="menu">
