--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -188,9 +188,10 @@
     <main id="contents">
         <h2>CSS  <em>레퍼런스 북</em></h2>
         <ul class="page">
+            <li><a href="../index.html">MAIN</a></li>
             <li><a href="../refer-html/index.html">HTML</a></li>
             <li><a href="../refer-css/index.html">CSS</a></li>
-            <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+            <li><a href="../javascript/index.html">JAVASCRIPT</a></li>
         </ul>
         <!-- <ul class="link">
             <li><a href="../javascript/javascriptSample602-1.html">CSS 속성 첫 글자 검색하기</a></li>
