--- a/refer-css/index2.html
+++ b/refer-css/index2.html
@@ -196,9 +196,10 @@
     <main id="contents">
         <h2>CSS  <em>레퍼런스 북</em></h2>
         <ul class="page">
+            <li><a href="../index.html">MAIN</a></li>
             <li><a href="../refer-html/index.html">HTML</a></li>
             <li><a href="../refer-css/index.html">CSS</a></li>
-            <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+            <li><a href="../javascript/index.html">JAVASCRIPT</a></li>
         </ul>
         <section class="refer">
             <h3><a href="index.html">Alphabet</a></h3>
