--- a/site/main.html
+++ b/site/main.html
@@ -29,7 +29,7 @@
                 </h1>
                 <nav class="menu">
                     <ul>
-                        <li><a href="#">메뉴 아이템</a></li>
+                        <li><a href="cardType01.html">cardType01</a></li>
                         <li><a href="#">메뉴 아이템</a></li>
                         <li><a href="#">메뉴 아이템</a></li>
                         <li><a href="#">메뉴 아이템</a></li>
